--- a/category.html
+++ b/category.html
@@ -7,6 +7,7 @@
     <title>Minideco</title>
     <link rel="stylesheet" href="css/category.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined">
 </head>
 <body>
     
@@ -73,10 +74,10 @@
     </header>
     
         <div class="sns-bt">
-            <ol>
+            <ul>
                 <li><a href="https://www.instagram.com/minideco2216/" target="_blank"><img src="img/insta.jpg" alt=""></a></li>
                 <li><a href="https://story.kakao.com/" target="_blank"><img src="img/kakao.jpg" alt=""></a></li>
-            </ol>
+            </ul>
         </div>
     <main>
         <div class="category">
@@ -135,10 +136,19 @@
                         <figcaption>
                             <img src="img/special1.jpg" alt="">
                             <div class="fig-bg">
-                                <div class="fig-bt">
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
+                                <div class="fig-bt1">
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            open_in_new
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            add_shopping_cart
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                        favorite
+                                        </span></div></a>
                                 </div>
                             </div>                  
                         </figcaption>
@@ -158,10 +168,19 @@
                         <figcaption>
                             <img src="img/special1.jpg" alt="">
                             <div class="fig-bg">
-                                <div class="fig-bt">
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
+                                <div class="fig-bt1">
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            open_in_new
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            add_shopping_cart
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                        favorite
+                                        </span></div></a>
                                 </div>
                             </div>
                         </figcaption>
@@ -181,10 +200,19 @@
                         <figcaption>
                             <img src="img/special1.jpg" alt="">
                             <div class="fig-bg">
-                                <div class="fig-bt">
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
+                                <div class="fig-bt1">
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            open_in_new
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            add_shopping_cart
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                        favorite
+                                        </span></div></a>
                                 </div>
                             </div>
                         </figcaption>
@@ -204,10 +232,19 @@
                         <img src="img/special1.jpg" alt="">
                         <figcaption>
                             <div class="fig-bg">
-                                <div class="fig-bt">
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
+                                <div class="fig-bt1">
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            open_in_new
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            add_shopping_cart
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                        favorite
+                                        </span></div></a>
                                 </div>
                             </div>
                         </figcaption>
@@ -227,10 +264,19 @@
                         <img src="img/special1.jpg" alt="">
                         <figcaption>
                             <div class="fig-bg">
-                                <div class="fig-bt">
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
+                                <div class="fig-bt1">
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            open_in_new
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            add_shopping_cart
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                        favorite
+                                        </span></div></a>
                                 </div>
                             </div>
                         </figcaption>
@@ -250,10 +296,19 @@
                         <img src="img/special1.jpg" alt="">
                         <figcaption>
                             <div class="fig-bg">
-                                <div class="fig-bt">
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
+                                <div class="fig-bt1">
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            open_in_new
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            add_shopping_cart
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                        favorite
+                                        </span></div></a>
                                 </div>
                             </div>
                         </figcaption>
@@ -273,10 +328,19 @@
                         <img src="img/special1.jpg" alt="">
                         <figcaption>
                             <div class="fig-bg">
-                                <div class="fig-bt">
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
+                                <div class="fig-bt1">
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            open_in_new
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            add_shopping_cart
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                        favorite
+                                        </span></div></a>
                                 </div>
                             </div>
                         </figcaption>
@@ -296,10 +360,19 @@
                         <img src="img/special1.jpg" alt="">
                         <figcaption>
                             <div class="fig-bg">
-                                <div class="fig-bt">
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
+                                <div class="fig-bt1">
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            open_in_new
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            add_shopping_cart
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                        favorite
+                                        </span></div></a>
                                 </div>
                             </div>
                         </figcaption>
@@ -319,10 +392,19 @@
                         <img src="img/special1.jpg" alt="">
                         <figcaption>
                             <div class="fig-bg">
-                                <div class="fig-bt">
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
+                                <div class="fig-bt1">
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            open_in_new
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            add_shopping_cart
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                        favorite
+                                        </span></div></a>
                                 </div>
                             </div>
                         </figcaption>
@@ -342,10 +424,19 @@
                         <img src="img/special1.jpg" alt="">
                         <figcaption>
                             <div class="fig-bg">
-                                <div class="fig-bt">
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
+                                <div class="fig-bt1">
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            open_in_new
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            add_shopping_cart
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                        favorite
+                                        </span></div></a>
                                 </div>
                             </div>
                         </figcaption>
@@ -365,10 +456,19 @@
                         <img src="img/special1.jpg" alt="">
                         <figcaption>
                             <div class="fig-bg">
-                                <div class="fig-bt">
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
+                                <div class="fig-bt1">
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            open_in_new
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            add_shopping_cart
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                        favorite
+                                        </span></div></a>
                                 </div>
                             </div>
                         </figcaption>
@@ -388,10 +488,19 @@
                         <img src="img/special1.jpg" alt="">
                         <figcaption>
                             <div class="fig-bg">
-                                <div class="fig-bt">
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
-                                    <a href=""><div></div></a>
+                                <div class="fig-bt1">
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            open_in_new
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                            add_shopping_cart
+                                            </span></div></a>
+                                    <a href=""><div>
+                                        <span class="material-icons-outlined">
+                                        favorite
+                                        </span></div></a>
                                 </div>
                             </div>
                         </figcaption>
