--- a/review.html
+++ b/review.html
@@ -73,10 +73,10 @@
 
     <!-- SNS -->
     <div class="sns-bt">
-        <ol>
+        <ul>
             <li><a href="https://www.instagram.com/minideco2216/" target="_blank"><img src="img/insta.jpg" alt=""></a></li>
             <li><a href="https://story.kakao.com/" target="_blank"><img src="img/kakao.jpg" alt=""></a></li>
-        </ol>
+        </ul>
     </div>
 
     <table class="notice-tb">
@@ -220,6 +220,8 @@
             </tr>    
         </tbody>
     </table>
+
+    <!-- 검색 및 페이지 -->
     <div class="undertable">
         <form class="category-search">
             <input type="search">
