--- a/notice.html
+++ b/notice.html
@@ -10,11 +10,13 @@
 <body>
     <main>
         <header class="header-1">
+            <input type="checkbox" id="burger" checked>
+            <label for="burger"><span>버거</span></label>
             <div class="header-2">
                 <div class="header-3">
                     <div class="logo">
                         <!-- <img src="img/logo.png" alt="LOGO"></a> -->
-                        <a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a>
+                        <div><a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a></div>
                     </div>
                     <ul class="menu-1">
                         <li><a href="category.html">CATEGORY</a></li>
@@ -70,6 +72,7 @@
                 </div>
             </div>
         </header>
+    
 
         <!-- SNS -->
         <div class="sns-bt">
@@ -91,73 +94,84 @@
             <tbody>
                 <tr>
                     <td>10</td>
-                    <td>재고 조사로 택배발송을 5일간 쉽니다~~~</td>
+                    <td><div>누구누구 | 작성일: 2020-05-05 | 조회수: 1</div>
+                        재고 조사로 택배발송을 5일간 쉽니다~~~
+                    </td>
                     <td>작성자</td>
                     <td>2020-05-05</td>
-                    <td>0</td>
+                    <td>1</td>
                 </tr>        
                 <tr>
                     <td>9</td>
-                    <td>재고 조사로 택배발송을 5일간 쉽니다~~~</td>
+                    <td><div>누구누구 | 작성일: 2020-05-05 | 조회수: 1</div>
+                        재고 조사로 택배발송을 5일간 쉽니다~~~</td>
                     <td>작성자</td>
                     <td>2020-05-05</td>
-                    <td>0</td>
+                    <td>1</td>
                 </tr>        
                 <tr>
                     <td>8</td>
-                    <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                    <td><div>누구누구 | 작성일: 2020-05-05 | 조회수: 1</div>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                     <td>작성자</td>
                     <td>2020-05-05</td>
-                    <td>0</td>
+                    <td>1</td>
                 </tr>        
                 <tr>
                     <td>7</td>
-                    <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                    <td><div>누구누구 | 작성일: 2020-05-05 | 조회수: 1</div>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                     <td>작성자</td>
                     <td>2020-05-05</td>
-                    <td>0</td>
+                    <td>1</td>
                 </tr>        
                 <tr>
                     <td>6</td>
-                    <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                    <td><div>누구누구 | 작성일: 2020-05-05 | 조회수: 1</div>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                     <td>작성자</td>
                     <td>2020-05-05</td>
-                    <td>0</td>
+                    <td>1</td>
                 </tr>        
                 <tr>
                     <td>5</td>
-                    <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                    <td><div>누구누구 | 작성일: 2020-05-05 | 조회수: 1</div>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                     <td>작성자</td>
                     <td>2020-05-05</td>
-                    <td>0</td>
+                    <td>1</td>
                 </tr>        
                 <tr>
                     <td>4</td>
-                    <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                    <td><div>누구누구 | 작성일: 2020-05-05 | 조회수: 1</div>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                     <td>작성자</td>
                     <td>2020-05-05</td>
-                    <td>0</td>
+                    <td>1</td>
                 </tr>        
                 <tr>
                     <td>3</td>
-                    <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                    <td><div>누구누구 | 작성일: 2020-05-05 | 조회수: 1</div>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                     <td>작성자</td>
                     <td>2020-05-05</td>
-                    <td>0</td>
+                    <td>1</td>
                 </tr>        
                 <tr>
                     <td>2</td>
-                    <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                    <td><div>누구누구 | 작성일: 2020-05-05 | 조회수: 1</div>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                     <td>작성자</td>
                     <td>2020-05-05</td>
-                    <td>0</td>
+                    <td>1</td>
                 </tr>        
                 <tr>
                     <td>1</td>
-                    <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                    <td><div>누구누구 | 작성일: 2020-05-05 | 조회수: 1</div>
+                        Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                     <td>작성자</td>
                     <td>2020-05-05</td>
-                    <td>0</td>
+                    <td>1</td>
                 </tr>
             </tbody>
         </table>
@@ -178,12 +192,13 @@
         </div>
         <footer>
             <div class="footer1">
-                <span>CS CENTER</span> <span>고객센터 </span> 010 1234 1234 ㅣ OPEN AM 10:00 - PM 5:00 ㅣ SAT.SUN.HOLIDAY OFF
+                <div><span>CS CENTER</span> <span>고객센터 </span></div> 010 1234 1234 ㅣ OPEN AM 10:00 - PM 5:00 ㅣ SAT.SUN.HOLIDAY OFF
             </div>
             <div class="footer2">
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
             </div>
         </footer>
+    
     </main>
 </body>
 </html>
