--- a/qna.html
+++ b/qna.html
@@ -10,11 +10,13 @@
 <body>
       
     <header class="header-1">
+        <input type="checkbox" id="burger" checked>
+        <label for="burger"><span>버거</span></label>
         <div class="header-2">
             <div class="header-3">
                 <div class="logo">
                     <!-- <img src="img/logo.png" alt="LOGO"></a> -->
-                    <a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a>
+                    <div><a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a></div>
                 </div>
                 <ul class="menu-1">
                     <li><a href="category.html">CATEGORY</a></li>
@@ -71,6 +73,7 @@
         </div>
     </header>
 
+
     <!-- SNS -->
     <div class="sns-bt">
         <ul>
@@ -91,7 +94,8 @@
             <tr>
                 <td>10</td>
                 <td>처리중</td>
-                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                <td><div>누구누구 | 작성일: 2020-05-05</div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                 <td>작성자</td>
                 <td>2020-05-05</td>
                 <td>0</td>
@@ -107,7 +111,8 @@
             <tr>
                 <td>8</td>
                 <td>답변완료</td>
-                <td>배송 언제 오나요?</td>
+                <td><div>누구누구 | 작성일: 2020-05-05</div>
+                    배송 언제 오나요?</td>
                 <td>작성자</td>
                 <td>2020-05-05</td>
                 <td>0</td>
@@ -115,13 +120,18 @@
             <tr class="answer">
                 <td></td>
                 <td></td>
-                <td>Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae odit dignissimos, similique nostrum doloribus fugiat reiciendis, neque officiis distinctio non quidem natus doloremque iusto laboriosam ullam nemo amet obcaecati odio.</td>
+                <td><div>minideco | 작성일: 2020-05-05</div>
+                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Vitae odit dignissimos, similique nostrum doloribus fugiat reiciendis, neque officiis distinctio non quidem natus doloremque iusto laboriosam ullam nemo amet obcaecati odio.
+                </td>
                 <td>minideco</td>
+                <td></td>
+                <td></td>
             </tr> 
             <tr>
                 <td>7</td>
                 <td>답변완료</td>
-                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                <td><div>누구누구 | 작성일: 2020-05-05</div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                 <td>작성자</td>
                 <td>2020-05-05</td>
                 <td>0</td>
@@ -129,7 +139,8 @@
             <tr>
                 <td>6</td>
                 <td>답변완료</td>
-                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                <td><div>누구누구 | 작성일: 2020-05-05</div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                 <td>작성자</td>
                 <td>2020-05-05</td>
                 <td>0</td>
@@ -137,7 +148,8 @@
             <tr>
                 <td>5</td>
                 <td>답변완료</td>
-                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                <td><div>누구누구 | 작성일: 2020-05-05</div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                 <td>작성자</td>
                 <td>2020-05-05</td>
                 <td>0</td>
@@ -145,7 +157,8 @@
             <tr>
                 <td>4</td>
                 <td>답변완료</td>
-                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                <td><div>누구누구 | 작성일: 2020-05-05</div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                 <td>작성자</td>
                 <td>2020-05-05</td>
                 <td>0</td>
@@ -153,7 +166,8 @@
             <tr>
                 <td>3</td>
                 <td>답변완료</td>
-                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                <td><div>누구누구 | 작성일: 2020-05-05</div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                 <td>작성자</td>
                 <td>2020-05-05</td>
                 <td>0</td>
@@ -161,7 +175,8 @@
             <tr>
                 <td>2</td>
                 <td>답변완료</td>
-                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                <td><div>누구누구 | 작성일: 2020-05-05</div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                 <td>작성자</td>
                 <td>2020-05-05</td>
                 <td>0</td>
@@ -169,7 +184,8 @@
             <tr>
                 <td>1</td>
                 <td>답변완료</td>
-                <td>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
+                <td><div>누구누구 | 작성일: 2020-05-05</div>
+                    Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex?</td>
                 <td>작성자</td>
                 <td>2020-05-05</td>
                 <td>0</td>
@@ -194,12 +210,13 @@
 
     <footer>
         <div class="footer1">
-            <span>CS CENTER</span> <span>고객센터 </span> 010 1234 1234 ㅣ OPEN AM 10:00 - PM 5:00 ㅣ SAT.SUN.HOLIDAY OFF
+            <div><span>CS CENTER</span> <span>고객센터 </span></div> 010 1234 1234 ㅣ OPEN AM 10:00 - PM 5:00 ㅣ SAT.SUN.HOLIDAY OFF
         </div>
         <div class="footer2">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
         </div>
     </footer>
+
 </body>
 </html>
 </body>
