--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
    
     <!-- HEADER, login -->
     <header class="header-1">
+        <input type="checkbox" id="burger" checked>
+        <label for="burger"><span>버거</span></label>
         <div class="header-2">
             <div class="header-3">
                 <div class="logo">
                     <!-- <img src="img/logo.png" alt="LOGO"></a> -->
-                    <a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a>
+                    <div><a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a></div>
                 </div>
                 <ul class="menu-1">
                     <li><a href="category.html">CATEGORY</a></li>
@@ -543,7 +545,20 @@
                     <div class="list-title">
                         <span class="list-title1">BEST</span>
                         <span class="list-title2">많은 사랑을 받은</span>
+                        <select id="category-select">
+                            <option>DIY미니어처</option>
+                            <option>룸박스/케이스</option>
+                            <option>나무제품</option>
+                            <option>주방용품</option>
+                            <option>가구완제품</option>
+                            <option>소품류</option>
+                            <option>금속제품/조명</option>
+                            <option>천/레이스</option>
+                            <option>벽지/기타재료</option>
+                            <option>핸드메이드</option>
+                        </select>
                     </div>
+                    
                     <figcaption>
                         <div class="fig-bg">
                             <div class="fig-bt1">
@@ -846,10 +861,10 @@
     </main>
     <footer>
         <div class="footer1">
-            <span>CS CENTER</span> <span>고객센터 </span> 010 1234 1234 ㅣ OPEN AM 10:00 - PM 5:00 ㅣ SAT.SUN.HOLIDAY OFF
+            <div><span>CS CENTER</span> <span>고객센터 </span></div> 010 1234 1234 ㅣ OPEN AM 10:00 - PM 5:00 ㅣ SAT.SUN.HOLIDAY OFF
         </div>
         <div class="footer2">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
         </div>
     </footer>
 
