--- a/myinfo.html
+++ b/myinfo.html
@@ -9,11 +9,13 @@
 </head>
 <body>
     <header class="header-1">
+        <input type="checkbox" id="burger" checked>
+        <label for="burger"><span>버거</span></label>
         <div class="header-2">
             <div class="header-3">
                 <div class="logo">
                     <!-- <img src="img/logo.png" alt="LOGO"></a> -->
-                    <a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a>
+                    <div><a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a></div>
                 </div>
                 <ul class="menu-1">
                     <li><a href="category.html">CATEGORY</a></li>
@@ -70,6 +72,7 @@
         </div>
     </header>
 
+
     <div class="signup-modal">
         <div class="signup-con">
             <div>
@@ -102,11 +105,12 @@
 
     <footer>
         <div class="footer1">
-            <span>CS CENTER</span> <span>고객센터 </span> 010 1234 1234 ㅣ OPEN AM 10:00 - PM 5:00 ㅣ SAT.SUN.HOLIDAY OFF
+            <div><span>CS CENTER</span> <span>고객센터 </span></div> 010 1234 1234 ㅣ OPEN AM 10:00 - PM 5:00 ㅣ SAT.SUN.HOLIDAY OFF
         </div>
         <div class="footer2">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
         </div>
     </footer>
+
 </body>
 </html>
