--- a/review.html
+++ b/review.html
@@ -10,11 +10,13 @@
 <body>
       
     <header class="header-1">
+        <input type="checkbox" id="burger" checked>
+        <label for="burger"><span>버거</span></label>
         <div class="header-2">
             <div class="header-3">
                 <div class="logo">
                     <!-- <img src="img/logo.png" alt="LOGO"></a> -->
-                    <a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a>
+                    <div><a href="index.html"><span>M</span>INI<SPAN>D</SPAN>ECO</a></div>
                 </div>
                 <ul class="menu-1">
                     <li><a href="category.html">CATEGORY</a></li>
@@ -71,6 +73,7 @@
         </div>
     </header>
 
+
     <!-- SNS -->
     <div class="sns-bt">
         <ul>
@@ -92,6 +95,7 @@
                 <td class="review-content">
                     <figure class="review-pt-big"></figure>
                     <div>
+                        <div>누구누구 | 작성일: 2020-05-05</div>
                         <figure class="review-star"></figure>
                         <div class="review-title-big">서랍 어떻게 해도 이쁘네요 </div>
                         <div class="review-comment">Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni tempore fugit animi fugiat expedita placeat voluptatibus voluptates vero velit magnam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Debitis atque error necessitatibus cum quas, quaerat facere velit fugiat eligendi unde?</div>
@@ -106,6 +110,7 @@
                 <td class="review-content">
                     <figure class="review-pt"></figure>
                     <div>
+                        <div>누구누구 | 작성일: 2020-05-05</div>
                         <figure class="review-star"></figure>
                         <div class="review-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex? </div>
                     </div>
@@ -119,6 +124,7 @@
                 <td class="review-content">
                     <figure class="review-pt"></figure>
                     <div>
+                        <div>누구누구 | 작성일: 2020-05-05</div>
                         <figure class="review-star"></figure>
                         <div class="review-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex? </div>
                     </div>
@@ -132,6 +138,7 @@
                 <td class="review-content">
                     <figure class="review-pt"></figure>
                     <div>
+                        <div>누구누구 | 작성일: 2020-05-05</div>
                         <figure class="review-star"></figure>
                         <div class="review-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex? </div>
                     </div>
@@ -145,6 +152,7 @@
                 <td class="review-content">
                     <figure class="review-pt"></figure>
                     <div>
+                        <div>누구누구 | 작성일: 2020-05-05</div>
                         <figure class="review-star"></figure>
                         <div class="review-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex? </div>
                     </div>
@@ -158,6 +166,7 @@
                 <td class="review-content">
                     <figure class="review-pt"></figure>
                     <div>
+                        <div>누구누구 | 작성일: 2020-05-05</div>
                         <figure class="review-star"></figure>
                         <div class="review-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex? </div>
                     </div>
@@ -171,6 +180,7 @@
                 <td class="review-content">
                     <figure class="review-pt"></figure>
                     <div>
+                        <div>누구누구 | 작성일: 2020-05-05</div>
                         <figure class="review-star"></figure>
                         <div class="review-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex? </div>
                     </div>
@@ -184,6 +194,7 @@
                 <td class="review-content">
                     <figure class="review-pt"></figure>
                     <div>
+                        <div>누구누구 | 작성일: 2020-05-05</div>
                         <figure class="review-star"></figure>
                         <div class="review-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex? </div>
                     </div>
@@ -197,6 +208,7 @@
                 <td class="review-content">
                     <figure class="review-pt"></figure>
                     <div>
+                        <div>누구누구 | 작성일: 2020-05-05</div>
                         <figure class="review-star"></figure>
                         <div class="review-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex? </div>
                     </div>
@@ -210,6 +222,7 @@
                 <td class="review-content">
                     <figure class="review-pt"></figure>
                     <div>
+                        <div>누구누구 | 작성일: 2020-05-05</div>
                         <figure class="review-star"></figure>
                         <div class="review-title">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloribus, ex? </div>
                     </div>
@@ -240,11 +253,12 @@
     
     <footer>
         <div class="footer1">
-            <span>CS CENTER</span> <span>고객센터 </span> 010 1234 1234 ㅣ OPEN AM 10:00 - PM 5:00 ㅣ SAT.SUN.HOLIDAY OFF
+            <div><span>CS CENTER</span> <span>고객센터 </span></div> 010 1234 1234 ㅣ OPEN AM 10:00 - PM 5:00 ㅣ SAT.SUN.HOLIDAY OFF
         </div>
         <div class="footer2">
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Quis ipsum suspendisse ultrices gravida. Risus commodo viverra maecenas accumsan lacus vel facilisis. 
         </div>
     </footer>
+
 </body>
 </html>
