--- a/index.html
+++ b/index.html
@@ -92,8 +92,8 @@
     <!-- SNS -->
     <div class="sns-bt">
         <ul>
-            <li><a href="https://www.instagram.com/minideco2216/" target="_blank"><img src="img/insta.jpg" alt=""></a></li>
-            <li><a href="https://story.kakao.com/" target="_blank"><img src="img/kakao.jpg" alt=""></a></li>
+            <li><a href="https://www.instagram.com/minideco2216/" target="_blank"><img src="img/insta.jpg" alt="insta"></a></li>
+            <li><a href="https://story.kakao.com/" target="_blank"><img src="img/kakao.jpg" alt="kakao"></a></li>
             <li class="sns-hidden"></li>
         </ul>
     </div>
@@ -142,7 +142,7 @@
                     <span class="list-title1">ON SALE</span>
                     <span class="list-title2">할인상품</span>
                 </div>
-                <figcaption>
+                <figcaption> 
                     <p class="onsale-percent">20%</p>
                     <div class="fig-bg"><!-- icon -->
                         <div class="fig-bt1">
